gccida/g1/find_free_reg
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_free_reg/src/local-alloc.c:2648:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class a1, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_free_reg/src/local-alloc.c:2649:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_free_reg/src/local-alloc.c:2673:46: error: use of undeclared identifier 'qty_0'
if ( ( *( ( _BYTE *)cfun + 425) & 1) != 0 && qty_0[qtyno].n_calls_crossed > 0 ) 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_free_reg/src/local-alloc.c:2685:7: error: use of undeclared identifier 'qty_0'
if ( !qty_0[qtyno].n_calls_crossed ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_free_reg/src/local-alloc.c:2723:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[mode] - 5) > 1 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_free_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_free_reg/src/local-alloc.c:2763:7: error: use of undeclared identifier 'unk_939B74'
if ( &unk_939B74 == ( _UNKNOWN *)++v17 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_free_reg/src/local-alloc.c:2781:8: error: use of undeclared identifier 'qty_0'
v19 = &qty_0[qtyno]; 
       ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/find_free_reg/src/obj/local-alloc.o] Error 1
